fix(gui): adjust window shadow and titlebar z-index on Windows, fixed splash-screen border radius (#19)

--- a/src-gui/src/styles/theme.css
+++ b/src-gui/src/styles/theme.css
@@ -35,6 +35,7 @@
 :root {
   color-scheme: light dark;
   background-color: transparent;
+  --border-radius: 0px;
 
   --font-size: 16px;
   --background: var(--app-bg-secondary);
@@ -291,7 +292,7 @@
   }
 
   body {
-    border-radius: 12px;
+    border-radius: var(--border-radius);
   }
 
   h1 {
